Modified edit handler mechanism to also allow it to handle adding new elements (plus button).